Signed-off-by: zhangyuchao <2859941342@qq.com>

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 
 </body>
-<script src="js/zyc.js"></script>
+<script src="js/relax.js"></script>
 <script>
-console.log(numberhandle.numbertormb(1044445555));
+console.log(numberfunc.numbertormb(1022223333));
 </script>
 </html>
